stopped the Buy Products button from stretching

--- a/public/styles/cart.css
+++ b/public/styles/cart.css
@@ -27,6 +27,7 @@
 #cart-total {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 #cart-total p {
